# templatr

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  install.sh  pyproject.toml
.claude/: settings.json
archive/: README.md
automatr/: __main__.py
bugs/: LOG.md
decisions/: 0001-template-ownership-split.md  0002-project-name.md  0003-catalog-interaction-model.md
docs/: README.md  multi-turn-chat.md  performance-dashboard.md  prompt-ab-testing.md  template-marketplace.md  templates.md  troubleshooting-linux.md  troubleshooting-macos.md  troubleshooting-windows.md
scripts/: build.py  build.spec  capture_screenshots.py  check_docs.py  dedupe_templates.py  download_llama_server.py
specs/: chat-ui-core.md  ci-pipeline.md  crash-logging.md  cross-platform-packaging.md  documentation-overhaul.md  graceful-error-recovery.md  incremental-decoupling.md  light-theme.md  multi-turn-chat.md  orchestratr-connector.md  performance-dashboard.md  platform-config-consolidation.md  prompt-ab-testing.md  responsive-layout.md  slash-commands.md  template-authoring-workflow.md  template-marketplace.md  template-rename.md  version-history-browser.md
tasks/: chat-ui-core.md  crash-logging.md  cross-platform-packaging.md  documentation-overhaul.md  graceful-error-recovery.md  incremental-decoupling.md  keyboard-shortcuts.md  light-theme.md  orchestratr-connector.md  phase-1-create-prompt-repo.md  phase-1-current-state-cleanup.md  phase-2-baseline-tests.md  phase-2-create-github-repos.md  phase-3-decompose-mainwindow.md  phase-4-retire-legacy-repo.md  phase-4-template-ownership.md  phase-5-create-espanso-repo.md  phase-5-governance.md  phase-6-validation.md  phase-7-task-system-reset.md  (+12 more)
(+136 files in other folders)
