[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "templatr"
version = "1.0.0"
description = "Local prompt optimizer with reusable templates and llama.cpp integration. No cloud, no API keys."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Templatr Contributors"}
]
keywords = ["llm", "prompt", "templates", "local", "llama.cpp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dependencies = [
    "PyQt6>=6.4.0",
    "requests>=2.28.0",
    "mistune>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
templatr = "templatr.__main__:main"

[project.urls]
Homepage = "https://github.com/josiahH-cf/templatr"
Repository = "https://github.com/josiahH-cf/templatr"

[tool.setuptools.packages.find]
where = ["."]
include = ["templatr*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
